Revision history for Template-Mustache

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]
  - silence expected warnings in tests. (GH#51)
  - parser now requires exactly two delimiters in '{= =}'. (GH#52)

  [ NEW FEATURES ]

  [ STATISTICS ]

1.1.0 2017-09-27
  [ DOCUMENTATION ]
    - add abstracts to the Token objects. (GH#46)

  [ ENHANCEMENTS ]
    - allow hyphen for variable/partial name. (karupanerura)

  [ MISC ]
    - put a newline after package definition. (GH#47)

  [ STATISTICS ]
    - code churn: 12 files changed, 74 insertions(+), 30 deletions(-)

1.0.4 2017-09-02
  [ BUG FIXES ]
    - A test was requiring Moose.

  [ STATISTICS ]
    - code churn: 2 files changed, 61 insertions(+), 53 deletions(-)

1.0.3 2017-08-30
  [ BUG FIXES ]
    - resolve variable correctly if the context is an object or an array.
      (GH#48)

  [ STATISTICS ]
    - code churn: 8 files changed, 108 insertions(+), 352 deletions(-)

1.0.2 2017-07-03
  - Promote to general release.

1.0.1_0 2017-06-30
  [ BUG FIXES ]
    - don't compile-test Template::Mustache::Trait (will fail if Moose is
      not installed). (GH#45)

  [ STATISTICS ]
    - code churn: 2 files changed, 16 insertions(+), 7 deletions(-)
    - code churn: 3 files changed, 10 insertions(+), 12 deletions(-)

1.0.0_0 2017-06-20
  [ API CHANGES ]
    - Major rewrite to support all of the specs (as of v1.1.3). (GH#14,
      GH#16)

  [ ENHANCEMENTS ]
    - new 'context' attribute for Template::Mustache objects. (GH#43)
    - add Template::Mustache::Trait. (GH#44)

  [ MISC ]
    - remove dist.ini for distribution. (GH#41)

  [ STATISTICS ]
    - code churn: 36 files changed, 8509 insertions(+), 674 deletions(-)

0.5.6 2016-11-17
  [ DISTRIBUTION MAINTENANCE ]
    - Maintenance passed to Yanick, github repo moved in consequence.

  [ FEATURES ]
    - Support dotted names (GH#38, jfparis84)

  [ STATISTICS ]
    - code churn: 25 files changed, 1242 insertions(+), 556 deletions(-)
